--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,4 +1,4 @@
-.menu_wrapper {
+.wrapper {
 	display: none;
 	position: fixed;
 	z-index: 12;
@@ -12,7 +12,7 @@
 	background-color: #fff;
 }
 
-.menu_modal {
+.modal {
 	display: none;
 	position: fixed;
 	z-index: 11;
@@ -29,7 +29,7 @@
 	display: block;
 }
 
-.menu_title {
+.title {
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
@@ -40,19 +40,19 @@
 	border-bottom: 1px solid #e5e6e9;
 }
 
-.menu_close {
+.close {
 	width: 13px;
 	height: 13px;
 	margin: auto 0;
 }
 
-.menu_nav {
+.nav {
 	padding: 20px;
 	gap: 20px;
 }
 
-.menu_nav li,
-.menu_nav ul {
+.nav li,
+.nav ul {
 	margin-top: 0;
 	margin-bottom: 20px;
 	padding: 0;
@@ -62,17 +62,17 @@
 	text-decoration: none;
 }
 
-.menu_nav a {
+.nav a {
 	color: #2e3640;
 	text-decoration: none;
 }
 
-.menu_nav a:hover {
+.nav a:hover {
 	color: #4c8bf7;
 	font-weight: 700;
 }
 
-.menu_logo {
+.logo {
 	display: block;
 	position: absolute;
 	right: 20px;
@@ -81,7 +81,7 @@
 	height: 30px;
 }
 
-.menu_logo svg {
+.logo svg {
 	fill: #c6c7c9;
 }
 
@@ -91,7 +91,7 @@
 		display: none;
 	}
 
-	.menu_wrapper {
+	.wrapper {
 		display: block;
 		position: static;
 		z-index: 1;
@@ -99,22 +99,22 @@
 		height: fit-content;
 	}
 
-	.menu_title {
+	.title {
 		display: none;
 	}
 
-	.menu_nav {
+	.nav {
 		padding: 0;
 		gap: 0;
 		border: 1px solid #e5e6e9;
 		border-bottom: none;
 	}
 
-	.menu_nav ul {
+	.nav ul {
 		margin: -1px;
 	}
 
-	.menu_nav li {
+	.nav li {
 		width: 100%;
 		height: 60px;
 		margin-bottom: 0;
@@ -122,7 +122,7 @@
 		border-bottom: 1px solid #e5e6e9;
 	}
 
-	.menu_logo {
+	.logo {
 		display: none;
 	}
 }
