добавлены css modules. SVG перенесены в SVGR.

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,4 @@
-.button-default {
+.default {
 	display: flex;
 	box-sizing: border-box;
 	flex-wrap: wrap;
@@ -17,7 +17,7 @@
 }
 
 @media (width >=768px) {
-	.button-default {
+	.default {
 		width: 156px;
 	}
 }
