--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,4 +1,4 @@
-.page_wrapper {
+.wrapper {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -9,13 +9,13 @@
 }
 
 @media (width >= 768px) {
-	.page_wrapper {
+	.wrapper {
 		margin-top: 40px;
 	}
 }
 
 @media (width >= 1280px) {
-	.page_wrapper {
+	.wrapper {
 		margin-top: 60px;
 		margin-bottom: 70px;
 	}
