--- a/src/components/SwitcherLine/SwitcherLine.module.css
+++ b/src/components/SwitcherLine/SwitcherLine.module.css
@@ -1,19 +1,19 @@
-.switcher-line_button {
+.button {
 	width: fit-content;
 	margin-right: 25px;
 	padding: 0 5px 6px;
 	color: #2e3640;
 }
 
-.switcher-line_button:last-child {
+.button:last-child {
 	margin-right: 0;
 }
 
-.switcher-line_selected {
+.selected {
 	border-bottom: 3px solid #4c8bf7;
 }
 
-.switcher-line_wrapper {
+.wrapper {
 	width: 100%;
 	margin-bottom: 26px;
 	border-bottom: 1px solid #4c8bf7;
